# watray

./: .gitignore  ChangeLog  ChangeLog-pre-0.2.0  Makefile.am  NEWS  ProjectHome.md  autogen.sh  configure.ac
pixmaps/: Makefile.am
po/: ChangeLog  POTFILES.in  POTFILES.skip  es.po  es_AR.po
tags/watray_0_1_0/: ChangeLog
tags/watray_0_1_0/watray/: Makefile.am  watrayplugin.vala  watrayplugininterface.vala  watraypluginmanager.vala  watraypreferencedialog.vala
tags/watray_0_1_0/watraysimple/: simpleconfiguremanager.vala
tags/watray_0_1_1/: ChangeLog  NEWS  watray-1.0.pc.in
tags/watray_0_1_1/po/: POTFILES.in
tags/watray_0_1_1/ui/: ui.xml
tags/watray_0_1_1/watray/: Makefile.am  watraypluginmanagerview.vala  watraypreferencemanager.vala  watrayproject.vala
tags/watray_0_1_1/watraysimple/: simpleconfiguredialog.vala
trunk/: ChangeLog  Makefile.am  configure.ac
trunk/po/: LINGUAS  POTFILES.in  POTFILES.skip  es.po  es_AR.po
trunk/ui/: Makefile.am  ui.xml
trunk/vapi/: config.vapi
trunk/watray/: Makefile.am  watraydocumentspanel.vala  watraydocumentspanelinterface.vala  watraydocumentspanellabel.vala  watraydocumentview.vala  watrayiteminfo.vala  watraymainwindow.vala  watraymainwindowinterface.vala  watrayplugin.vala  watrayplugininfo.vala  watrayplugininterface.vala  watraypluginmanager.vala  watraypluginmanagerview.vala  watraypreferencemanager.vala  watrayproject.vala  watrayprojectspanel.vala  watrayprojectspanelinterface.vala
trunk/watraysimple/: Makefile.am  simple.watrayplugin  simpledocumentmanager.vala  simpledocumentview.vala  simpleplugin.vala
ui/: ui.xml
watray/: Makefile.am  watraydocumentspanel.vala  watraydocumentspanelinterface.vala  watraydocumentspanelview.vala  watraymainwindow.vala  watrayplugin.vala  watrayplugininfo.vala  watraypluginmanager.vala  watraypluginmanagerview.vala  watraypreferencedialog.vala  watraypreferencemanager.vala  watrayproject.vala  watrayprojectspanel.vala  watrayprojectspanelinterface.vala  watrayprojectspanelitem.vala  watrayprojectspanelproject.vala
watraysimple/: Makefile.am  simpledocumentmanager.vala  simpledocumentview.vala  simpleplugin.vala  simpleprojectmanager.vala
