AC_INIT(Watray, 0.1.0)
AC_CONFIG_SRCDIR([Makefile.am])
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE([dist-bzip2])
AM_MAINTAINER_MODE

AC_PROG_CC
AM_PROG_CC_C_O
AC_DISABLE_STATIC
AC_PROG_LIBTOOL

AC_PATH_PROG(VALAC, valac, valac)
AC_SUBST(VALAC)

AH_TEMPLATE([GETTEXT_PACKAGE], [General purpose IDE])
GETTEXT_PACKAGE=watray
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE")
AC_SUBST(GETTEXT_PACKAGE)
AM_GLIB_GNU_GETTEXT
IT_PROG_INTLTOOL([0.35.0])

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

GLIB_REQUIRED=2.12.0
GTK_REQUIRED=2.10.0
GCONF_REQUIRED=2.22.0
GEE_REQUIRED=0.1.4

PKG_CHECK_MODULES(WATRAY,
	[glib-2.0 >= $GLIB_REQUIRED
	gobject-2.0 >= $GLIB_REQUIRED
	gmodule-2.0 >= $GLIB_REQUIRED
	gtk+-2.0 >= $GTK_REQUIRED
	gconf-2.0 >= $GCONF_REQUIRED
	gee-1.0 >= $GEE_REQUIRED])

AC_SUBST(WATRAY_CFLAGS)
AC_SUBST(WATRAY_LIBS)

PKG_CHECK_MODULES(WATRAYSIMPLE,
	[glib-2.0 >= $GLIB_REQUIRED
	gobject-2.0 >= $GLIB_REQUIRED
	gtk+-2.0 >= $GTK_REQUIRED
	gconf-2.0 >= $GCONF_REQUIRED
	gee-1.0 >= $GEE_REQUIRED])

AC_SUBST(WATRAYSIMPLE_CFLAGS)
AC_SUBST(WATRAYSIMPLE_LIBS)

AC_CONFIG_FILES([Makefile
	watray-1.0.pc
	watray/Makefile
	watraysimple/Makefile
	ui/Makefile
	po/Makefile.in])

AC_OUTPUT
